# nanopb-mcu-demo

./: README.md
pbchat-host/: CMakeLists.txt  README.md
pbchat-host/proto/: chat.options  chat.proto
pbchat-host/scripts/: gen_proto.sh
pbchat-host/src/: main.c
pbchat-host/src/proto/: chat.pb.h
pbchat-mcu/: CMakeLists.txt  STM32C092XX_FLASH.ld
pbchat-mcu/App/Drivers/: uart_driver.c  uart_driver.h
pbchat-mcu/App/Proto/: proto_link.c  proto_link.h
pbchat-mcu/Core/Inc/: board.h  stm32c0xx_it.h
pbchat-mcu/Core/Src/: board.c  main.c  stm32c0xx_it.c
pbchat-mcu/tools/: gen_proto.sh
